0.8.6 (UNRELEASED)
------------------
- Fix compilation on sparc with gcc 4.9.
- Support attributes with leading directory names, such as "queue/rotational".
  (issue #41)

0.8.5 (2014-07-11)
------------------
- Fix building with gcc 4.9 on 32 bit architectures.
- Restrict input-touchpad test case to 64 bit architectures, as we don't
  currently have recorded ioctls for 32 bit.
- Lower number of iterations in mt_uevent test case to avoid overflowing the
  netlink buffer on loaded machines.

0.8.4 (2014-07-10)
------------------
- Make SKIP messages go to to stdout, like all the other the test suite output.
- Fix test case failures when running tests without a controlling tty.

0.8.3 (2014-07-10)
------------------
- Add umockdev_testbed_get_property() method. This is mostly for internal
  umockdev testing, umockdev users should use libudev/gudev get_property
  functions.
- preload: Make path redirection to testbed thread-safe for wrapped functions.
  This does NOT address all multi-thread issues, but should work for simple
  cases. (https://launchpad.net/bugs/1336671)
- Make debug logging dynamically controllable with the $UMOCKDEV_DEBUG
  environment variable. See README.rst for details.
- Emulate isatty(). It would previously return true for emulated devices as
  PTYs are being used internally, but the actual emulated device is not always
  supposed to be a TTY. Fixes regression with X.org synaptics >= 1.8 device
  emulation as that uses xf86OpenSerial() to open evdev devices (which is
  wrong, but reality).
- Don't fall back to real ioctls on emulated fds.

0.8.2 (2014-05-15)
------------------
- Fix ioctl recording of multiple device open/close cycles. This regressed in
  0.6 to only keep the data of the last cycle.
- Update devices/cameras/canon-powershot-sx200.ioctl with ioctls from
  libgphoto2 2.5.4, to make the /umockdev-run/integration/gphoto-* tests work
  with that version.
- On ioctl recording, also record the device name on close().
