@@ -339,6 +339,35 @@ t_testbed_child_device(UMockdevTestbedFixture * fixture, gconstpointer data)
     g_free(input);
 }
 
+/* UMockdevTestbed add_device() with adding a block device */
+static void
+t_testbed_add_block_device(UMockdevTestbedFixture * fixture, gconstpointer data)
+{
+    gchar *syspath;
+
+    syspath = umockdev_testbed_add_device(fixture->testbed, "block", "scribble", NULL,
+					  /* attributes */
+					  "size", "10000", NULL,
+					  /* properties */
+					  "ID_TYPE", "disk", NULL);
+    g_assert(syspath);
+    g_assert_cmpstr(syspath, ==, "/sys/devices/scribble");
+
+    /* check attributes */
+    g_assert(g_file_test("/sys/devices/scribble/size", G_FILE_TEST_IS_REGULAR));
+    g_assert(g_file_test("/sys/devices/scribble/uevent", G_FILE_TEST_IS_REGULAR));
+    g_assert(g_file_test("/sys/devices/scribble/subsystem", G_FILE_TEST_IS_SYMLINK));
+
+    /* check class symlinks */
+    g_assert(g_file_test("/sys/class/block/scribble", G_FILE_TEST_IS_SYMLINK));
+    g_assert(g_file_test("/sys/class/block/scribble/size", G_FILE_TEST_IS_REGULAR));
+
+    g_assert(g_file_test("/sys/block/scribble", G_FILE_TEST_IS_SYMLINK));
+    g_assert(g_file_test("/sys/block/scribble/size", G_FILE_TEST_IS_REGULAR));
+
+    g_free(syspath);
+}
+
 struct TestbedErrorCatcherData {
     unsigned counter;
     GLogLevelFlags last_level;
@@ -1858,6 +1887,8 @@ main(int argc, char **argv)
 	       t_testbed_add_devicev, t_testbed_fixture_teardown);
     g_test_add("/umockdev-testbed/add_device", UMockdevTestbedFixture, NULL, t_testbed_fixture_setup,
 	       t_testbed_add_device, t_testbed_fixture_teardown);
+    g_test_add("/umockdev-testbed/add_block_device", UMockdevTestbedFixture, NULL, t_testbed_fixture_setup,
+	       t_testbed_add_block_device, t_testbed_fixture_teardown);
     g_test_add("/umockdev-testbed/add_device_errors", UMockdevTestbedFixture, NULL, t_testbed_fixture_setup,
 	       t_testbed_add_device_errors, t_testbed_fixture_teardown);
     g_test_add("/umockdev-testbed/child_device", UMockdevTestbedFixture, NULL, t_testbed_fixture_setup,
