@@ -3,6 +3,7 @@
 - Fix compilation on sparc with gcc 4.9.
 - Support attributes with leading directory names, such as "queue/rotational".
   (issue #41)
+- Create /sys/block symlink for block devices (other part of issue #41).
 
 0.8.5 (2014-07-11)
 ------------------
